# py-math

./: .gitignore  pyproject.toml
src/: __init__.py  quaternion.py
src/__tests__/unit/: test_quaternion.py
src/py_math_omm/: __init__.py  generic_vector.py  quaternion.py  some_types.py  types.py  vector.py
